syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";

service ProductProtoService {
	rpc GetProduct (GetProductRequest) returns (ProductModel);
	rpc GetAllProducts (GetAllProductRequest) returns (stream ProductModel);

	rpc AddProduct (AddProductRequest) returns (ProductModel);
	rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
	rpc InsertBulkProduct (stream ProductModel) returns (InsertBulkProductResponse);
}

message GetProductRequest {
  int32 productId = 1;
}

message GetAllProductRequest {
}

message AddProductRequest {
  ProductModel product= 1;
}

message DeleteProductRequest {
  int32 productId = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message InsertBulkProductResponse {
	bool success = 1;
	int32 insertCount = 2;
}

message ProductModel {
  int32 productId = 1;
  string name = 2;
  ProductStatus status = 3;
}

enum ProductStatus {
	InStock = 0;
	Low = 1;
	None = 2;
}